# bevy_wasm_scripting

./: Cargo.toml  LICENSE  README.md
assets/: add_n.wat  add_n_to_accumulator.wat  add_one_for_resource.wat  add_one_to_accumulator.wat  edit_me.wat  multiply_two.wat
assets/breakout/scripts/: gravity.wasm
assets/breakout/source/: ball_imports.rs  compile_rust.sh  gravity.rs
examples/: breakout.rs  component_script_calls.rs  direct_script_calls.rs  hot_reloading.rs  imported_funcs.rs  resource_script_calls.rs  script_calls.rs  script_loading.rs
src/: assets.rs  calls.rs  commands.rs  components.rs  entity.rs  lib.rs  resources.rs  world_pointer.rs
